--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -29,6 +29,7 @@
   
         <button type="submit" class="btn btn-primary">Save</button>
         <button type="button" (click)="cancel()" class="btn btn-default">Cancel</button>
+        <button type="button" (click)="logout()" class="btn btn-warning float-right">Log Out</button>
       </form>
     </div>
   </div>
